# LynxMCP

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LynxManager.bat  LynxManager.command  README.md  ROADMAP.md  config.example.json  config.py  glama.json  mcp_server.py  pyproject.toml  rag_manager.py  requirements.txt  server.json  test_drift.py  test_filters.py  test_hybrid_vs_dense.py  test_watch.py
.github/workflows/: publish-model.yml  release.yml  steampipe-plugin-ci.yml  steampipe-plugin-release.yml  test.yml
benchmarks/: RESULTS.md  RESULTS_csharp.md  RESULTS_java.md  make_chart.py  measured.json  outline_tokens.py  pricing.json  run_benchmark.py  savings_calculator.html  savings_calculator.py  structural_demo.py  tasks_django.json  tasks_guava.json  tasks_jsonnet.json
docker/: config.docker.json
docs/: CORAL.md  DESIGN_graph_html_export.md  DUCKDB.md  GUIDE.md  MCP_RECIPES.md  OUTLINE.md
installer/: README.md
installer/macos/: Info.plist.template  bootstrap.sh  build-dmg.sh  launcher.sh
installer/windows/: bootstrap.bat  bootstrap.cmd  lynx.iss
integrations/coral/: manifest.yaml  toolkit.py
integrations/coral/community-pr/lynx/: README.md  manifest.yaml
integrations/github-action/: README.md  pr_impact.py  workflow.example.yml
integrations/steampipe/: DESIGN.md
integrations/steampipe/steampipe-plugin-lynx/: Makefile  README.md  go.mod  main.go
integrations/steampipe/steampipe-plugin-lynx/config/: lynx.spc
integrations/steampipe/steampipe-plugin-lynx/lynx/: client.go  connection_config.go  plugin.go  table_lynx_graph.go  table_lynx_search.go  table_lynx_source.go
src/local_codebase_rag_mcp/: __init__.py  __main__.py  cli.py  config.py  rag_manager.py  server.py
src/lynx/: __init__.py  __main__.py  _format.py  chunking.py  cli.py  config.py  errors.py  fs_scan.py  integrity.py  outline.py  overview.py  rag_manager.py  reranker.py  server.py  source_manager.py
src/lynx/graph/: __init__.py  analyzer.py  builder.py  extractor.py  query.py  render.py
src/lynx/manager/: __init__.py  ansi.py  cli.py  doctor.py  feedback.py  init.py  install.py
src/lynx/manager/ui/: __init__.py  app.py  detect.py  integrations.py  jobs.py  lock.py  pages.py  routes.py
src/lynx/manager/ui/templates/: add_source_chooser.html  add_source_form.html  base.html  config.html  dashboard.html  doctor.html  integrations.html  placeholder.html  playground.html  source_detail.html  sources_list.html
src/lynx/sources/: __init__.py  base.py  codebase.py  pdf.py  pdf_dump.py  pdf_extractor.py  webdoc.py
tests/: conftest.py  test_api_v1.py  test_bm25_incremental.py  test_combined_tools.py  test_deep_search.py  test_diff_search.py  test_drift.py  test_filters.py  test_fs_scan.py  test_graph_analyzer.py  test_graph_builder.py  test_graph_extractor.py  test_graph_incremental.py  test_graph_integration.py  test_graph_mcp_tools.py  test_graph_query.py  test_hybrid_vs_dense.py  test_manager_doctor.py  test_manager_feedback.py  test_manager_init.py  test_manager_install.py  test_manager_ui_app.py  test_multi_source.py  test_outline.py  test_pdf_backend.py  test_pdf_config.py  test_pdf_dump.py  test_pdf_extractor.py  test_reranker.py  test_result_quality.py  test_search_all_rerank.py  test_search_batch.py  test_server_tools.py  test_sha_incremental.py  test_source_manager_model_missing.py  test_tree_sitter.py  test_watch.py  test_webdoc.py  test_webdoc_render.py
