[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynx"
version = "0.3.0"
description = "Lynx — a self-hosted MCP server with semantic + lexical search over your local code and documentation. AST-aware chunking via tree-sitter, multi-source, 100% local, no data egress. (Named after Lynceus, the Argonaut whose sharp eyes could find anything hidden.)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lorenzo Cambiaghi" },
]
requires-python = ">=3.10"
keywords = [
    "mcp",
    "model-context-protocol",
    "rag",
    "codebase",
    "semantic-search",
    "bm25",
    "local",
    "claude",
    "antigravity",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp",
    "llama-index",
    "llama-index-vector-stores-chroma",
    "llama-index-embeddings-huggingface",
    "chromadb",
    "gitpython",
    "watchdog",
    "rank-bm25",
    # AST-aware chunking via tree-sitter. Per-language packages bundle the
    # compiled parser in the wheel — no runtime download (preserves the
    # "100% local, no data egress" guarantee). Each pkg is small (~200KB).
    "tree-sitter>=0.25",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-cpp",
    "tree-sitter-c",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
lynx = "lynx.cli:main"

[project.urls]
Homepage = "https://github.com/loren/lynx"
Repository = "https://github.com/loren/lynx"
Issues = "https://github.com/loren/lynx/issues"

[tool.setuptools.packages.find]
where = ["src"]
