[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name is `lynx-mcp` (the bare `lynx` name on PyPI belongs to an
# unrelated 2014 config library). The import package and the CLI stay `lynx`.
name = "lynx-mcp"
version = "1.6.0"
description = "100% local MCP server for semantic + lexical code search: AST-aware chunking (tree-sitter), hybrid BM25+dense retrieval, optional code knowledge graph."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lorenzo Cambiaghi" },
]
requires-python = ">=3.10"
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "rag",
    "code-search",
    "codebase",
    "semantic-search",
    "knowledge-graph",
    "tree-sitter",
    "bm25",
    "local",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp",
    # llama-index-core, NOT the `llama-index` meta-package: the meta-package
    # drags in the OpenAI bundle (openai, llama-index-llms-openai, ...) we
    # never import — dead weight, and an alarming sight in the install log
    # of a project whose promise is "100% local, no data egress".
    "llama-index-core",
    "llama-index-vector-stores-chroma",
    "llama-index-embeddings-huggingface",
    "chromadb",
    "gitpython",
    "watchdog",
    "rank-bm25",
    # AST-aware chunking via tree-sitter. Per-language packages bundle the
    # compiled parser in the wheel — no runtime download (preserves the
    # "100% local, no data egress" guarantee). Each pkg is small (~200KB).
    "tree-sitter>=0.25",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-cpp",
    "tree-sitter-c",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-php",
    "tree-sitter-kotlin",
    "tree-sitter-swift",
    "tree-sitter-bash",
    "tree-sitter-sql",
    "tree-sitter-scala",
    "tree-sitter-lua",
    # Pure-Python graph library used by the opt-in graph layer (call graph +
    # import graph + community detection). Small (~2MB), no native code.
    "networkx>=3.0",
    # M4 webdoc source: fetch + extract + index public docs sites on demand.
    # All three are well-maintained, pure-Python, no compilation needed.
    "httpx>=0.27",          # HTTP client used by the crawler
    "beautifulsoup4>=4.12", # link discovery (a[href] extraction)
    "trafilatura>=1.10",    # main-content extraction → markdown
    "truststore>=0.10",     # use the OS certificate store for TLS — needed on
                            # Windows where corporate/antivirus chains aren't
                            # in certifi's Mozilla bundle. Pure-stdlib wrapper,
                            # ~10KB. Falls back to certifi if unavailable.
    # PDF source (type: "pdf"): pypdf is the default extractor.
    # Pure Python, MIT, no system binaries. Coherent with the "100% local,
    # zero external deps" promise. For richer extraction on multi-column
    # PDFs see the optional `pdf-fast` extra below (pymupdf, AGPL).
    "pypdf>=4.0",
    # Cross-encoder reranker (optional via config; ~80MB model downloaded
    # on first use when enabled). Already pulled in transitively by
    # llama-index-embeddings-huggingface, but we pin it explicitly so the
    # reranker feature has a documented baseline.
    "sentence-transformers>=2.7",
    # LynxManager web UI (`lynx manager ui`). uvicorn/starlette/jinja2 are
    # already pulled in by `mcp`; FastAPI is the only direct add — it gives
    # us routing decorators, dependency injection, and request validation
    # on top of starlette for ~10 lines of code we'd otherwise hand-write.
    "fastapi>=0.110",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "reportlab>=4",  # used by the PDF test suite to generate synthetic PDFs
]
# Opt-in faster / higher-quality PDF extraction backend. PyMuPDF is AGPL,
# so we don't make it a hard dependency. Activate with
# `pip install "lynx-mcp[pdf-fast]"` when working with academic two-column
# papers or complex layouts.
pdf-fast = [
    "pymupdf>=1.24",
]
# Opt-in JS rendering for webdoc sources (`render_js: true`): loads pages in
# headless Chromium so SPA / client-side-rendered docs sites become crawlable.
# After pip-installing, the browser binary must be fetched once with
# `python -m playwright install chromium` (~150MB) — `lynx manager install
# webdoc-js` does both steps.
webdoc-js = [
    "playwright>=1.40",
]

[project.scripts]
lynx = "lynx.cli:main"

[project.urls]
Homepage = "https://github.com/lorenzo-cambiaghi/LynxMCP"
Repository = "https://github.com/lorenzo-cambiaghi/LynxMCP"
Issues = "https://github.com/lorenzo-cambiaghi/LynxMCP/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the HTML templates and static assets (Tailwind JIT + HTMX) with
# the wheel. Without this they're left out of the install and the web UI
# fires up but returns 500s when serving the dashboard.
[tool.setuptools.package-data]
"lynx.manager.ui" = [
    "templates/*.html",
    "static/*.js",
    "static/*.css",
]
